deployement/backend-deployement.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs
  labels:
    app: generator-photo
spec:
  ports:
    - port: 3000
  selector:
    app: generator-photo
    tier: nestjs
  # clusterIP: None
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs
  labels:
    app: generator-photo
spec:
  selector:
    matchLabels:
      app: generator-photo
      tier: nestjs
  strategy:
    type: Recreate
  replicas: 5
  template:
    metadata:
      labels:
        app: generator-photo
        tier: nestjs
    spec:
      containers:
        - image: jhitescia/api-nest-kube:latest
          volumeMounts:
            - name: pvc
              mountPath: /images
          imagePullPolicy: Always
          name: nestjs
          ports:
            - containerPort: 3000
              name: generator-photo
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: pvc
            labels:
              app: generator-photo
