deployement/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /deployement
          backend:
            serviceName: generatorPhoto
            servicePort: 5000
